--- a/app/src/main/res/layout/activity_write_day_plan.xml
+++ b/app/src/main/res/layout/activity_write_day_plan.xml
@@ -9,6 +9,31 @@
     android:orientation="vertical"
     tools:context="com.wtcrmandroid.activity.WriteDayPlanActivity">
 
+    <RelativeLayout
+        android:id="@+id/rl_head"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/white"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/tv_dayplan_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/app_name"/>
+
+        <ImageButton
+            android:id="@+id/ib_dayplan_calender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@null"
+            android:src="@mipmap/ic_xrz_calender"/>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_dayplan_submit"
@@ -23,6 +48,7 @@
     <ListView
         android:id="@+id/lv_write_dayplan"
         android:layout_above="@id/tv_dayplan_submit"
+        android:layout_below="@id/rl_head"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
