--- a/app/src/main/res/layout/dialog_work_sort.xml
+++ b/app/src/main/res/layout/dialog_work_sort.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="30dp"
         android:text="@string/work_sort"
         android:textSize="15sp"
         android:textColor="@android:color/black"/>
@@ -19,6 +19,7 @@
         >
 
         <LinearLayout
+            android:id="@+id/ll_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -43,6 +44,49 @@
                 android:padding="20dp"
                 android:textColor="@android:color/black"
                 android:text="C类"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@android:color/black"
+                android:text="D类"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/ll_left"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@color/colorContext"
+                android:text="紧急有重要"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@color/colorContext"
+                android:text="较重要"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@color/colorContext"
+                android:text="重要"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="@color/colorContext"
+                android:text="次重要"/>
 
         </LinearLayout>
 
@@ -73,6 +117,13 @@
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 />
+
+            <RadioButton
+                android:id="@+id/rb_D"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                />
         </RadioGroup>
 
 
@@ -83,23 +134,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp">
 
+
         <Button
             android:id="@+id/bt_worksort_dialog_sure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
             android:background="@null"
-            android:text="确定"/>
-
-        <Button
-            android:id="@+id/bt_worksort_dialog_cancle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_toLeftOf="@id/bt_worksort_dialog_sure"
-            android:background="@null"
-            android:text="取消"/>
+            android:text="确定"
+            android:textColor="@color/colorPrimary"/>
     </RelativeLayout>
 
 </LinearLayout>
