--- a/app/src/main/res/layout/item_write_week_conclusion.xml
+++ b/app/src/main/res/layout/item_write_week_conclusion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-写周计划item布局
+写周总结item布局
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -100,6 +100,32 @@
             android:layout_weight="1"
             android:background="@null"
             android:hint="此工作所占比重"
+            android:textColor="#2b2f33"
+            android:textColorHint="#C5C9CD"
+            android:textSize="18dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="0.5dp"
+        android:background="#ffffff"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/ic_proportion" />
+
+        <EditText
+            android:id="@+id/et_result"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="实际完成结果和进度"
             android:textColor="#2b2f33"
             android:textColorHint="#C5C9CD"
             android:textSize="18dp" />
