--- a/app/src/main/res/layout/item_write_week_conclusion.xml
+++ b/app/src/main/res/layout/item_write_week_conclusion.xml
@@ -46,6 +46,8 @@
             android:textSize="18dp" />
 
         <ImageView
+            android:padding="10dp"
+            android:id="@+id/iv_microphone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@mipmap/ic_microphone" />
