--- a/app/src/main/res/layout/activity_write_week_plan.xml
+++ b/app/src/main/res/layout/activity_write_week_plan.xml
@@ -18,8 +18,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:gravity="center_vertical"
-        android:background="#ffffff"
-        android:layout_marginTop="20dp">
+        android:background="#ffffff">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
