--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
 
     <dimen name="refresh_header_height">80dp</dimen>
     <dimen name="load_more_footer_height">60dp</dimen>
+
+    <dimen name="ViewWith">1dp</dimen>
 </resources>
