--- a/app/src/main/res/layout/activity_write_week_plan.xml
+++ b/app/src/main/res/layout/activity_write_week_plan.xml
@@ -48,6 +48,7 @@
         android:layout_marginTop="20dp"
         />
     <Button
+        android:id="@+id/bt_submit"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
