--- a/app/src/main/res/layout/activity_journal_manager.xml
+++ b/app/src/main/res/layout/activity_journal_manager.xml
@@ -25,24 +25,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="10dp">
+            >
 
             <LinearLayout
                 android:id="@+id/ll_write_day_conclusion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:layout_width="135dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/shape_rounded_rectangle5_white_bg"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp">
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="10dp"
                     android:src="@mipmap/ic_rzgl_daysum" />
 
                 <TextView
@@ -61,24 +60,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
+            android:gravity="right"
             android:orientation="vertical"
-            android:padding="10dp">
+            >
 
             <LinearLayout
                 android:id="@+id/ll_write_day_plan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:layout_width="135dp"
+                android:layout_height="90dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/shape_rounded_rectangle5_white_bg"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp">
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="10dp"
                     android:src="@mipmap/ic_rzgl_dayplan" />
 
                 <TextView
@@ -106,24 +105,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:padding="10dp">
+            >
 
             <LinearLayout
                 android:id="@+id/ll_write_week_conclusion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:layout_width="135dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/shape_rounded_rectangle5_white_bg"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp">
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="10dp"
                     android:src="@mipmap/ic_rzgl_weeksum" />
 
                 <TextView
@@ -142,24 +140,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
+            android:gravity="right"
             android:orientation="vertical"
-            android:padding="10dp">
+            >
 
             <LinearLayout
                 android:id="@+id/ll_write_week_plane"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
+                android:layout_width="135dp"
+                android:layout_height="90dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/shape_rounded_rectangle5_white_bg"
                 android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp">
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="10dp"
                     android:src="@mipmap/ic_rzgl_weekplan" />
 
                 <TextView
@@ -207,7 +205,10 @@
             android:src="@mipmap/ic_rzgl_arrow" />
 
     </RelativeLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e9edf2" />
     <RelativeLayout
         android:id="@+id/rl_department_employees_log_management"
         android:layout_width="match_parent"
