--- a/app/src/main/res/layout/activity_department_employees_log_management_search.xml
+++ b/app/src/main/res/layout/activity_department_employees_log_management_search.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/left_image"
+            android:id="@+id/iv_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
