--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,6 +52,7 @@
                         android:textSize="15dp" />
 
                     <RelativeLayout
+
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1">
@@ -77,6 +78,7 @@
                         android:textSize="15dp" />
 
                     <TextView
+                        android:id="@+id/tv_field"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
