--- a/app/src/main/res/layout/activity_my_journal.xml
+++ b/app/src/main/res/layout/activity_my_journal.xml
@@ -35,11 +35,8 @@
             android:id="@id/swipe_target"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
             android:clipToPadding="false"
-            android:divider="@null"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"/>
+            android:divider="@null"/>
 
         <include
             android:id="@id/swipe_load_more_footer"
