--- a/app/src/main/res/layout/item_my_journal.xml
+++ b/app/src/main/res/layout/item_my_journal.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:layout_marginLeft="10dp"
-              android:layout_marginRight="10dp"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        >
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_journal_title"
@@ -17,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name" />
 
         <ImageView
             android:id="@+id/tv_journal_type"
@@ -25,21 +27,22 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ic_type_dayplan"/>
+            android:src="@mipmap/ic_type_dayplan" />
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        >
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_journal_content"
+            style="@style/HintsText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/gjfa"
-            style="@style/HintsText"/>
+            android:text="@string/gjfa" />
     </LinearLayout>
-
 
 </LinearLayout>
