--- a/app/src/main/res/layout/activity_sale_pullinto_customer.xml
+++ b/app/src/main/res/layout/activity_sale_pullinto_customer.xml
@@ -170,7 +170,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -192,7 +193,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/hint_address"
+                        android:hint="@string/hint_address"
                         android:textSize="@dimen/Text32"
                         android:textColor="@color/colorContext"
                         />
@@ -255,7 +256,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/hint_jog"
+                        android:hint="@string/hint_jog"
                         android:textSize="@dimen/Text32"
                         android:textColor="@color/colorContext"/>
 
@@ -286,7 +287,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/hint_jog"
+                        android:hint="@string/hint_jog"
                         android:textSize="@dimen/Text32"
                         android:textColor="@color/colorContext"/>
 
@@ -317,7 +318,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/hint_emil"
+                        android:hint="@string/hint_emil"
                         android:textSize="@dimen/Text32"
                         android:textColor="@color/colorContext"/>
 
@@ -348,7 +349,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/hint_qq"
+                        android:hint="@string/hint_qq"
                         android:textSize="@dimen/Text32"
                         android:textColor="@color/colorContext"/>
 
@@ -379,7 +380,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/hint_message"
+                        android:hint="@string/hint_message"
                         android:textSize="@dimen/Text32"
                         android:textColor="@color/colorContext"/>
 
