--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-   >
-   <!-- <ImageView
+    android:layout_height="wrap_content"
+    android:padding="10dp">
+    <ImageView
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:background="@mipmap/ic_app"/>
+   <View
+       android:layout_width="1dp"
+       android:layout_height="match_parent"
+      android:background="@color/lineColor"
+       android:layout_marginLeft="10dp"/>
     <TextView
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
@@ -14,7 +19,7 @@
         android:text="每天进步一点点！"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_18"
-        android:layout_marginLeft="15dp"
-        android:layout_gravity="center_vertical"/>-->
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"/>
 
 </LinearLayout>
